# finance-data-lakehouse

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-mwaa.txt
.github/workflows/: ci.yml
dags/: finance_lakehouse_dag.py
dbt/finance_lakehouse/: dbt_project.yml  profiles.yml
dbt/finance_lakehouse/models/: schema.yml  sources.yml
dbt/finance_lakehouse/models/marts/: gold_security_coverage_summary.sql  gold_security_master.sql
dbt/finance_lakehouse/models/staging/: stg_market_data.sql  stg_sec_submissions.sql
dbt/finance_lakehouse/seeds/: market_data.csv  sec_submissions.csv  security_universe.csv  seeds.yml
docs/: architecture.md  deployment.md  runbook.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: run_dbt_local.ps1  run_local_checks.ps1
src/finance_lakehouse/: __init__.py  config.py  models.py
src/finance_lakehouse/jobs/: __init__.py  common.py  delta.py  glue_market_bronze.py  glue_market_silver.py  glue_sec_bronze.py  glue_sec_silver.py  glue_support.py  operations.py  runtime.py  silver_curated.py
tests/: test_delta.py  test_glue_market_bronze.py  test_glue_market_silver.py  test_glue_sec_bronze.py  test_glue_sec_silver.py  test_glue_support.py  test_jobs_common.py  test_operations.py  test_runtime.py  test_silver_curated.py
